[package]
name = "vmpwwasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']
#target = 'wasm32-unknown-unknown'
path = 'src/things/systems/renderer.rs'

[dependencies]
wasm-bindgen = ""
gl = ""